# RBE3002_template

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: mapping.rviz
launch/: demo_navigation.launch  maze_sim.launch  practice_exploration.launch  practice_maze.launch
maps/: AK220Map.world  AK220Map.yaml  map exports  map.world  map.yaml  simple_map.world  simple_map.yaml
models/Maze/: model.sdf
models/Maze2/: model.config  model.sdf
src/lab02/: Robot.py
src/lab03/: A_Star.py  PriorityQueue.py  map_helper.py
src/lab04/: Expand_Map.py
worlds/: maze1.world  maze2.world
